# IXWebSocket_template

./: CMakeLists.txt  README.md  cmake.toml  ws_client.cpp
cmake/: cmkr.cmake  fmt.cmake  ixwebsocket.cmake  mbedtls.cmake  nlohmann_json.cmake  zlib.cmake
src/: rest_client.cpp
